[package]
name = "piper"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "The Middle-Out Data Optimizer."

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
crossterm = "0.29.0"
dirs = "6.0.0"
filesize = "0.2.0"
ratatui = "0.30.0"
walkdir = "2.5.0"
zstd = "0.13.3"
rayon = "1.10.0"
clap = { version = "4.5", features = ["derive"] }
